<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.chuolmvvm.viewmodel.SettingViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:text="@string/setting"
            android:textAlignment="center"
            android:textColor="#0E0D0D"
            android:textSize="21sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="35dp">

                <LinearLayout
                    android:id="@+id/linear_personal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderline"
                    android:onClick="@{v -> viewModel.onPersonalInfoClick()}"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_personalInfo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="@string/personal_information"
                        android:textSize="16sp" />

                    <ImageView
                        android:id="@+id/img_personalInfo"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"

                        android:src="@drawable/ic_account" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderline"
                    android:onClick="@{v -> viewModel.onPostHistoryClick()}"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_history"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:text="@string/post_history"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/img_history"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:src="@drawable/ic_edit" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_signout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borderline"
                    android:gravity="center"
                    android:onClick="@{v -> viewModel.onSignOutClick()}"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="0.7"
                        android:text="@string/sign_out"
                        android:textSize="16sp" />

                    <ImageButton
                        android:id="@+id/img_signout"
                        android:layout_width="25dp"
                        android:layout_height="wrap_content"
                        android:background="#00FFFFFF"
                        android:src="@drawable/ic_signout" />
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/borderline"
                    android:text="@string/choul"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/aboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="10dp"
                    android:onClick="@{v -> viewModel.onAboutUsClick()}"
                    android:text="@string/about_us"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/termofUse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="10dp"
                    android:onClick="@{v -> viewModel.onTermConClick()}"
                    android:text="@string/term_of_use_and_conditions"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
