<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.chuolmvvm.viewmodel.PersonalFragmentViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:orientation="vertical"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/my_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    android:elevation="4dp"
                    android:focusableInTouchMode="true"
                    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:gravity="center"
                    android:text="@string/personal_information"
                    android:textAlignment="center"
                    android:textColor="#0E0D0D"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_img_view"
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:layout_marginBottom="15dp"
                        app:url="@{viewModel.imgUrl}"
                        tools:src="@drawable/default_user_icon" />

                    <Button
                        android:id="@+id/select_img_btn"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/upload_img_bg_btn"
                        android:text="@string/select_image"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:onClick="@{v -> viewModel.onSelectImgClick()}"/>

                    <Button
                        android:id="@+id/cancel_img_btn"
                        android:layout_width="120dp"
                        android:layout_height="30dp"
                        android:background="@drawable/cancel_img_bg_btn"
                        android:paddingVertical="@dimen/zero_dp"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_first_name"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_fname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.firstName}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_last_name"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_lname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.lastName}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_email"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.email}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:text="@string/personal_tel"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={viewModel.tel}"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/submit_btn"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorPrimary"
                        android:onClick="@{v -> viewModel.onSaveClick()}"
                        android:text="@string/save"
                        android:textColor="#fff"
                        android:textSize="16sp"
                        android:visibility="@{viewModel.saveBtnVisibility}" />

                    <ProgressBar
                        android:id="@+id/activity_personal_progressbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:visibility="@{viewModel.progessVisibility}"
                        tools:visibility="gone" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>
