<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.chuolmvvm.viewmodel.SigninViewModel" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="25dp"
        android:paddingTop="30dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email_black"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock_black"
                android:text="@={viewModel.password}"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:onClick="@{() -> viewModel.onLoginClick()}"
                android:visibility="@{viewModel.loginBtnVisibility}"
                android:textColor="#fff" />

            <com.victor.loading.rotate.RotateLoading
                android:id="@+id/rotateloading"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:loading_color="@color/colorPrimary"
                android:visibility="@{viewModel.loadingVisibility}"
                app:loading_width="2dp" />
        </LinearLayout>

    </LinearLayout>
</layout>